spacing solved

--- a/src/Pages/Home/Hero/Hero.css
+++ b/src/Pages/Home/Hero/Hero.css
@@ -54,7 +54,7 @@
   border: none !important;
   font-size: 20px !important;
   padding: 8px 40px !important;
-  width: 250px !important;
+  width: 180px !important;
 }
 
 @media only screen and (max-width: 426px) {
