--- a/src/Pages/TourPage/TourPage.css
+++ b/src/Pages/TourPage/TourPage.css
@@ -1,7 +1,7 @@
 .tour-hero {
   position: relative;
   display: flex;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .tour-hero-bg {
